Fix(Logic): Fixxing logic