@@ -4,24 +4,26 @@ import org.javatuples.Pair;
 import org.uniba.kobold.api.error.*;
 import org.uniba.kobold.entities.inventory.Inventory;
 import org.uniba.kobold.entities.inventory.Item;
-import org.uniba.kobold.entities.inventory.availableItems.Bill;
-import org.uniba.kobold.entities.inventory.availableItems.Cloak;
 import org.uniba.kobold.entities.room.*;
 import org.uniba.kobold.entities.room.avaliableRooms.*;
+import org.uniba.kobold.errors.RoomNotAccessibleError;
 import org.uniba.kobold.game.minigames.*;
 import org.uniba.kobold.parser.Parser;
 import org.uniba.kobold.parser.ParserOutput;
 import org.uniba.kobold.parser.ParserUtils;
+import org.uniba.kobold.util.ColorText;
+
 import java.io.File;
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 
 public class Game {
     private final Parser parser;
-    private RoomsMap roomPath;
+    private final RoomsMap roomPath;
     private MiniGame currentGame = null;
-    private Room currentRoom;
 
     public Game() throws IOException {
         StartingRoom r1 = new StartingRoom();
@@ -50,20 +52,20 @@ public class Game {
                         Pair.with(r8, false)
                     )
                 )),
-                Pair.with(r5, new RoomPath(Arrays.asList(Pair.with(r4, true)))),
-                Pair.with(r6, new RoomPath(Arrays.asList(Pair.with(r4, true)))),
-                Pair.with(r7, new RoomPath(Arrays.asList(Pair.with(r4, true)))),
+                Pair.with(r5, new RoomPath(List.of(Pair.with(r4, true)))),
+                Pair.with(r6, new RoomPath(List.of(Pair.with(r4, true)))),
+                Pair.with(r7, new RoomPath(List.of(Pair.with(r4, true)))),
                 Pair.with(r8, new RoomPath(
                     Arrays.asList(Pair.with(r9, true), Pair.with(r4, true))
                 )),
-                Pair.with(r9, new RoomPath(Arrays.asList(Pair.with(r8, true))))
+                Pair.with(r9, new RoomPath(List.of(Pair.with(r8, true))))
         ));
 
         System.out.println(roomPath.getCurrentRoom().getDescription());
     }
 
     public void executeCommand(String command) {
-        currentRoom = roomPath.getCurrentRoom();
+        Room currentRoom = roomPath.getCurrentRoom();
 
         ParserOutput parsedCommand = parser.parse(
             command,
@@ -73,13 +75,13 @@ public class Game {
         );
 
         if (parsedCommand == null || parsedCommand.getCommand() == null) {
-            System.out.print("Command not found");
+            System.out.print("Cosa vuoi fare non sto capendo?\n");
 
             return;
         }
 
         if (currentGame == null) {
-            RoomInteractionResult result = roomPath.getCurrentRoom().executeCommand(parsedCommand);
+            RoomInteractionResult result = roomPath.getCurrentRoom().generalCommands(parsedCommand);
             try {
                 manageRoomInteraction(result);
             } catch (HttpInternalServerErrorException | HttpNotFoundException | HttpUnavailableException | HttpBadRequestException | HttpForbiddenException e) {
@@ -89,6 +91,7 @@ public class Game {
            MiniGameInteraction result = currentGame.play(parsedCommand);
            manageMiniGameInteraction(result);
         }
+        System.out.println();
     }
 
     private void manageMiniGameInteraction(MiniGameInteraction result) {
@@ -98,16 +101,14 @@ public class Game {
         if (result.getType() == MiniGameInteractionType.EXIT || result.getType() == MiniGameInteractionType.WIN_AND_EXIT) {
             currentGame = null;
         }
-
         if (result.getType() == MiniGameInteractionType.WIN || result.getType() == MiniGameInteractionType.WIN_AND_EXIT) {
             Inventory.addPiece((Item) result.getResult());
-        } else {
-            Inventory.removePiece((Item) result.getResult());
         }
     }
 
     public void manageRoomInteraction(RoomInteractionResult result) throws HttpInternalServerErrorException, HttpNotFoundException, HttpUnavailableException, HttpBadRequestException, HttpForbiddenException {
         switch (result.getResultType()) {
+            case NOTHING -> System.out.println("Non posso fare nulla");
             case DESCRIPTION -> System.out.println(result.getSubject());
             case UNLOCK -> this.roomPath.unlockPath(result.getSubject());
             case ADD_ITEM -> {
@@ -115,16 +116,20 @@ public class Game {
                 Inventory.addPiece((Item) result.getArgument());
             }
             case MOVE -> {
-                roomPath.moveTo(result.getSubject());
-                System.out.println(roomPath.getCurrentRoom().getDescription());
+                try {
+                    roomPath.moveTo(result.getSubject());
+                    System.out.println(roomPath.getCurrentRoom().getDescription());
+                } catch (RoomNotAccessibleError e) {
+                    System.out.println(ColorText.setTextRed("Non puoi andare in quella direzione devi fare prima qualcosa!!!\n"));
+                }
             }
             case PLAY -> {
                 switch (result.getSubject()) {
-                    case "king" -> {
-                        currentGame = new BarManControl();
-                        System.out.println(currentGame.getDescription());
-                    }
+                    case "blackjack" -> currentGame = new BlackJackControl();
+                    case "barman" -> currentGame = new BarManControl();
+                    case "rullo" -> currentGame = new SeekerGameControl();
                 }
+                System.out.println(currentGame.getDescription());
             }
         }
     }
